--- a/OAuth/site.Master
+++ b/OAuth/site.Master
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <title>BAPI - DB2 Blob web API</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="DB2 Blob web API (BAPI)">
+  <meta name="description" content="Undersøgelse af Microsoft Live og Google API's brug af OAuth 2.0">
   <meta name="author" content="Finn Jordal">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -31,12 +31,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a href="default.aspx" class="brand">BAPI</a>
+        <a href="default.aspx" class="brand">OAuth 2.0</a>
         <div id="topbar" class="nav-collapse collapse">
           <ul class="nav">
             <li class="active"><a href="default.aspx">Introduktion</a></li>
-            <li><a href="webapi.aspx">Web API</a></li>
-            <li><a href="kodeeksempler.aspx">Kodeeksempler</a></li>
+            <li><a href="microsoftlive.aspx">Microsoft Live</a></li>
+            <li><a href="googleapi.aspx">Google API</a></li>
           </ul>
         </div>
       </div>
