--- a/OAuth/site.Master
+++ b/OAuth/site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="site.master.cs" Inherits="OAuth.site" %>
+﻿<%@ Master Language="C#" AutoEventWireup="True" CodeBehind="site.master.cs" Inherits="OAuth.site" %>
 
 <!DOCTYPE html>
 <html lang="da">
