--- a/OAuth/site.Master
+++ b/OAuth/site.Master
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
-  <title>BAPI - DB2 Blob web API</title>
+  <title>OAuth 2.0 eksperimenter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Undersøgelse af Microsoft Live og Google API's brug af OAuth 2.0">
   <meta name="author" content="Finn Jordal">
